--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "lodash-es": "^4.17.11",
     "npm-run-all": "^4.1.5",
     "rollup": "^1.10.1",
     "rollup-plugin-commonjs": "^9.3.4",
@@ -9,7 +10,7 @@
     "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^4.0.4",
-    "sirv-cli": "^0.3.1",
+    "sirv-cli": "^0.4.0",
     "svelte": "^3.0.0"
   },
   "scripts": {
@@ -18,8 +19,5 @@
     "dev": "run-p start:dev autobuild",
     "start": "sirv public",
     "start:dev": "sirv public --dev"
-  },
-  "dependencies": {
-    "lodash-es": "^4.17.11"
   }
 }
