--- a/cra/package.json
+++ b/cra/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@types/jest": "^24.0.16",
+    "@types/lodash-es": "^4.17.3",
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
+    "lodash-es": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
