--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
     "lodash-es": "^4.17.15",
+    "mobx": "^5.13.0",
+    "mobx-react-lite": "^1.4.1",
+    "mobx-state-tree": "^3.14.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "unique-selector": "^0.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
