--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@types/jest": "^24.0.16",
     "@types/lodash-es": "^4.17.3",
+    "@types/match-sorter": "^2.3.0",
     "@types/node": "^12.6.9",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
     "lodash-es": "^4.17.15",
+    "match-sorter": "^4.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
