--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tailwindcss-gui",
-  "version": "0.1.0",
+  "name": "cra",
+  "version": "0.0.0",
   "private": true,
   "dependencies": {
     "@types/jest": "^24.0.16",
@@ -11,9 +11,9 @@
     "@types/react-dom": "^16.8.5",
     "lodash-es": "^4.17.15",
     "match-sorter": "^4.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "3.1.1",
     "typescript": "^3.5.3"
   },
   "scripts": {
