--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
-  "name": "root",
   "private": true,
+  "scripts": {
+    "start": "concurrently yarn:start-cra yarn:start-gui",
+    "start-cra": "cd examples/cra && PORT=3000 yarn start",
+    "start-gui": "cd packages/gui && PORT=4000 yarn start"
+  },
+  "workspaces": [
+    "examples/*",
+    "packages/*"
+  ],
   "devDependencies": {
-    "lerna": "^3.16.4"
+    "concurrently": "^4.1.2"
   }
 }
