--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -1,21 +1,17 @@
 {
   "name": "cra",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "^24.0.16",
-    "@types/lodash-es": "^4.17.3",
-    "@types/match-sorter": "^2.3.0",
-    "@types/node": "^12.6.9",
-    "@types/react": "^16.8.24",
-    "@types/react-dom": "^16.8.5",
-    "lodash-es": "^4.17.15",
-    "match-sorter": "^4.0.1",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.2",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "tailwindcss": "^1.1.2",
-    "typescript": "^3.5.3"
+    "typescript": "3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
