--- a/packages/gui/package.json
+++ b/packages/gui/package.json
@@ -20,6 +20,7 @@
     "next": "9.0.5",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "tailwindcss": "^1.1.2"
+    "tailwindcss": "^1.1.2",
+    "urql": "^1.4.0"
   }
 }
