--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "codevisor": "*",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
@@ -14,6 +15,7 @@
     "typescript": "3.5.3"
   },
   "scripts": {
+    "dev": "codevisor",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
