--- a/packages/codevisor/package.json
+++ b/packages/codevisor/package.json
@@ -19,6 +19,9 @@
     "jscodeshift": "^0.6.4",
     "lodash": "^4.17.15",
     "match-sorter": "^4.0.1",
+    "mobx": "^5.13.0",
+    "mobx-react-lite": "^1.4.1",
+    "mobx-state-tree": "^3.14.1",
     "next": "9.0.5",
     "open": "^6.4.0",
     "react": "16.9.0",
