--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "next": "9.1.1",
     "react": "16.10.2",
-    "react-dom": "16.10.2"
+    "react-dom": "16.10.2",
+    "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
     "codevisor": "*"
