Rename to codelift

--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -14,7 +14,7 @@
     "typescript": "3.6.4"
   },
   "devDependencies": {
-    "codevisor": "*"
+    "codelift": "*"
   },
   "scripts": {
     "start": "react-scripts start",
