--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/core": "^0.4.1",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
     "@types/classnames": "^2.2.9",
     "@types/jscodeshift": "^0.6.2",
     "@types/lodash": "^4.14.137",
@@ -15,6 +18,7 @@
     "@zeit/next-css": "^1.0.1",
     "apollo-server-micro": "^2.9.0",
     "classnames": "^2.2.6",
+    "emotion-theming": "^10.0.19",
     "graphql": "^14.5.3",
     "jscodeshift": "^0.6.4",
     "lodash": "^4.17.15",
