--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -12,25 +12,25 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
     "@types/classnames": "^2.2.9",
-    "@types/jscodeshift": "^0.6.2",
-    "@types/lodash": "^4.14.137",
+    "@types/jscodeshift": "^0.6.3",
+    "@types/lodash": "^4.14.149",
     "@types/match-sorter": "^2.3.0",
     "@zeit/next-css": "^1.0.1",
-    "apollo-server-micro": "^2.9.0",
+    "apollo-server-micro": "^2.9.12",
     "classnames": "^2.2.6",
     "emotion-theming": "^10.0.19",
-    "graphql": "^14.5.3",
+    "graphql": "^14.5.8",
     "jscodeshift": "^0.6.4",
     "lodash": "^4.17.15",
-    "match-sorter": "^4.0.1",
-    "mobx": "^5.13.0",
-    "mobx-react-lite": "^1.4.1",
-    "mobx-state-tree": "^3.14.1",
-    "next": "9.0.5",
-    "open": "^6.4.0",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "tailwindcss": "^1.1.2",
-    "urql": "^1.4.0"
+    "match-sorter": "^4.0.2",
+    "mobx": "^5.15.0",
+    "mobx-react-lite": "^1.5.1",
+    "mobx-state-tree": "^3.15.0",
+    "next": "9.1.4",
+    "open": "^7.0.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "typescript": "^3.7.2",
+    "urql": "^1.6.3"
   }
 }
