--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "prerelease": "yarn build",
-    "release": "np --contents packages/codelift"
+    "start": "next start"
   },
   "dependencies": {
     "@chakra-ui/core": "^0.4.1",
@@ -34,8 +32,5 @@
     "react-dom": "16.12.0",
     "typescript": "^3.7.2",
     "urql": "^1.6.3"
-  },
-  "devDependencies": {
-    "np": "^5.1.3"
   }
 }
