--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "codelift",
   "version": "0.1.2",
+  "private": true,
   "repository": "ericclemmons/codelift",
   "scripts": {
     "build": "cd packages/codelift && yarn build",
