--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -2,6 +2,10 @@
   "name": "codelift",
   "bin": "./bin/codelift.js",
   "version": "0.1.0",
+  "files": [
+    "./bin",
+    "server.js"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
