--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "cra": "cd examples/cra && codelift",
     "next": "cd examples/next && codelift dev",
     "prerelease": "yarn workspace codelift build",
-    "release": "yarn workspace codelift np --yolo",
+    "release": "yarn workspace codelift publish",
     "test": "echo No Tests"
   },
   "workspaces": [
@@ -13,7 +13,6 @@
     "packages/*"
   ],
   "devDependencies": {
-    "concurrently": "^5.0.0",
-    "np": "^5.1.3"
+    "concurrently": "^5.0.0"
   }
 }
