--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -18,10 +18,6 @@
     "@chakra-ui/core": "^0.4.1",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
-    "@types/classnames": "^2.2.9",
-    "@types/jscodeshift": "^0.6.3",
-    "@types/lodash": "^4.14.149",
-    "@types/match-sorter": "^2.3.0",
     "@zeit/next-css": "^1.0.1",
     "apollo-server-micro": "^2.9.12",
     "classnames": "^2.2.6",
@@ -33,11 +29,17 @@
     "mobx": "^5.15.0",
     "mobx-react-lite": "^1.5.1",
     "mobx-state-tree": "^3.15.0",
-    "next": "9.1.4",
+    "next": "^9.1.4",
     "open": "^7.0.0",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "typescript": "^3.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "urql": "^1.6.3"
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.9",
+    "@types/jscodeshift": "^0.6.3",
+    "@types/lodash": "^4.14.149",
+    "@types/match-sorter": "^2.3.0",
+    "typescript": "^3.7.2"
   }
 }
