--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.3",
   "files": [
     "./bin",
-    "./next",
+    ".next",
     "register.dev.js",
     "register.js",
     "server.js"
