--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production next start"
   },
   "dependencies": {
     "@chakra-ui/core": "^0.4.1",
