Explicitly add core-js due to missing core-js/library/fn/object/get-own-property-descriptor

--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -23,6 +23,7 @@
     "@zeit/next-css": "^1.0.1",
     "apollo-server-micro": "^2.9.12",
     "classnames": "^2.2.6",
+    "core-js": "^3.4.7",
     "emotion-theming": "^10.0.19",
     "graphql": "^14.5.8",
     "jscodeshift": "^0.6.4",
