Revert "Fix files to include dist + register*"
This reverts commit 663746b726327bec35cc94d4c0aae641354c98b4.

--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -3,9 +3,11 @@
   "bin": "./dist/index.js",
   "version": "0.1.15",
   "files": [
-    "dist",
+    "./bin",
+    ".next",
     "register.dev.js",
-    "register.js"
+    "register.js",
+    "server.js"
   ],
   "scripts": {
     "dev": "next dev",
