--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -1,21 +1,17 @@
 {
   "name": "codelift",
-  "bin": "./dist/index.js",
-  "version": "0.1.15",
+  "bin": "./bin/codelift.js",
+  "version": "0.1.16",
   "files": [
-    "./bin",
     ".next",
+    "bin",
     "register.dev.js",
     "register.js",
     "server.js"
   ],
   "scripts": {
     "dev": "next dev",
-    "prebuild": "rimraf .next dist",
-    "build": "run-p --print-label build:*",
-    "build:bin": "ncc build ./bin/codelift.js -o dist",
-    "build:next": "next build",
-    "postbuild": "mv .next dist",
+    "build": "next build",
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
@@ -45,9 +41,6 @@
     "@types/jscodeshift": "^0.6.3",
     "@types/lodash": "^4.14.149",
     "@types/match-sorter": "^2.3.0",
-    "@zeit/ncc": "^0.20.5",
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.0",
     "typescript": "^3.7.2"
   }
 }
