--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -34,7 +34,8 @@
     "open": "^7.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "urql": "^1.6.3"
+    "urql": "^1.6.3",
+    "wait-for-localhost": "^3.2.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
