--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -34,6 +34,7 @@
     "open": "^7.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "unique-selector": "^0.4.1",
     "urql": "^1.6.3",
     "wait-for-localhost": "^3.2.0"
   },
