--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -22,6 +22,7 @@
     "apollo-server-micro": "^2.9.12",
     "classnames": "^2.2.6",
     "core-js": "^2.6.10",
+    "cross-spawn": "^7.0.1",
     "emotion-theming": "^10.0.19",
     "graphql": "^14.5.8",
     "jscodeshift": "^0.6.4",
