--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -35,6 +35,7 @@
     "open": "^7.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-feather": "^2.0.3",
     "urql": "^1.6.3",
     "wait-for-localhost": "^3.2.0"
   },
