--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -8,15 +8,16 @@
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
-    "next": "latest",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "next": "^9.1.6",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "autoprefixer": "^9.6.5",
+    "codelift": "*",
     "cssnano": "^4.1.0",
     "postcss-easy-import": "^3.0.0",
-    "tailwindcss": "^1.0.1"
+    "tailwindcss": "^1.1.4"
   }
 }
