--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -47,6 +47,7 @@
     "@types/jscodeshift": "^0.6.3",
     "@types/lodash": "^4.14.149",
     "@types/match-sorter": "^2.3.0",
+    "@types/react-dev-utils": "^9.0.2",
     "autoprefixer": "^9.6.5",
     "cssnano": "^4.1.0",
     "postcss-easy-import": "^3.0.0",
