--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,10 +10,12 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Prepare repository
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git checkout ${GITHUB_REF:11} --
           git remote rm origin
-          git remote add origin https://ericclemmons:GITHUB_TOKEN@github.com/ericclemmons/codelift
+          git remote add origin "https://$GH_TOKEN@github.com/ericclemmons/codelift.git"
           git fetch origin --tags
           git branch --set-upstream-to origin/${GITHUB_REF:11} ${GITHUB_REF:11}
 
