--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "codelift",
-  "repository": "ericclemmons/ericclemmons",
+  "repository": "ericclemmons/codelift",
   "author": "Eric Clemmons <eric@smarterspam.com>",
   "scripts": {
     "build": "cd packages/codelift && yarn build",
