--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "cd packages/codelift && yarn build",
     "cra": "cd examples/cra && codelift",
     "next": "cd examples/next && codelift dev",
-    "release": "./scripts/release.sh",
+    "release": "auto shipit",
     "test": "echo No Tests"
   },
   "workspaces": [
