Remove released plugin
$ auto shipit
✖  error     None of the plugins that you are using implement the `canary` command!

"canary" releases are versions that are used solely to test changes. They make sense on some platforms (ex: npm) but not all!

--- a/.autorc
+++ b/.autorc
@@ -3,5 +3,5 @@
   "owner": "ericclemmons",
   "name": "Eric Clemmons",
   "email": "eric@smarterspam.com",
-  "plugins": ["released"]
+  "plugins": []
 }
