Use default plugins

--- a/.autorc
+++ b/.autorc
@@ -2,6 +2,5 @@
   "repo": "codelift",
   "owner": "ericclemmons",
   "name": "Eric Clemmons",
-  "email": "eric@smarterspam.com",
-  "plugins": []
+  "email": "eric@smarterspam.com"
 }
