--- a/.autorc
+++ b/.autorc
@@ -2,5 +2,9 @@
   "repo": "codelift",
   "owner": "ericclemmons",
   "name": "Eric Clemmons",
-  "email": "eric@smarterspam.com"
+  "email": "eric@smarterspam.com",
+  "plugins": [
+    "npm",
+    "released"
+  ]
 }
