Add @aulisius as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -18,6 +18,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "aulisius",
+      "name": "​Faizaan",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/6629172?v=4",
+      "profile": "https://aulisi.us",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
