--- a/.autorc
+++ b/.autorc
@@ -4,6 +4,7 @@
   "name": "Eric Clemmons",
   "email": "eric@smarterspam.com",
   "plugins": [
+    "all-contributors",
     "npm",
     "released"
   ]
