--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "devDependencies": {
     "@auto-it/all-contributors": "^9.3.2",
+    "@auto-it/first-time-contributor": "^9.3.2",
     "all-contributors-cli": "^6.13.0",
     "auto": "^9.3.2",
     "concurrently": "^5.0.0",
