--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -16,7 +16,8 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/15182?v=4",
       "profile": "https://ericclemmons.com/",
       "contributions": [
-        "code"
+        "code",
+        "doc"
       ]
     },
     {
