--- a/examples/cra/package.json
+++ b/examples/cra/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "cra",
-  "version": "0.0.0",
+  "version": "0.6.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.0.2",
     "@testing-library/react": "^9.3.2",
@@ -17,7 +17,7 @@
     "typescript": "~3.7.2"
   },
   "devDependencies": {
-    "codelift": "*"
+    "codelift": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
