--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "next",
-  "version": "0.0.0",
+  "version": "0.6.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
     "autoprefixer": "^9.6.5",
-    "codelift": "*",
+    "codelift": "^0.6.0",
     "cssnano": "^4.1.0",
     "postcss-easy-import": "^3.0.0",
     "tailwindcss": "^1.1.4"
