--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,7 +17,8 @@
       "profile": "https://ericclemmons.com/",
       "contributions": [
         "code",
-        "doc"
+        "doc",
+        "infra"
       ]
     },
     {
