--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "codelift",
-  "repository": "ericclemmons/codelift",
+  "repository": "git@github.com:ericclemmons/codelift.git",
   "author": "Eric Clemmons <eric@smarterspam.com>",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
