--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,4 +32,4 @@ jobs:
         run: |
           yarn install --frozen-lockfile
           yarn build
-          yarn release
+          yarn release -vv
