--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: git fetch --tags
+      - name: Prepare repository
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git checkout ${GITHUB_REF:11} --
+          git remote rm origin
+          git remote add origin "https://x-access-token:$GH_TOKEN@github.com/ericclemmons/codelift.git"
+          git fetch origin --tags
+          git branch --set-upstream-to origin/${GITHUB_REF:11} ${GITHUB_REF:11}
 
       - name: Use Node.js 12.x
         uses: actions/setup-node@v1
@@ -29,7 +37,6 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          echo $GITHUB_ACTION
           yarn install --frozen-lockfile
           yarn build
           yarn release
