Publish index.d.ts

--- a/packages/codelift/package.json
+++ b/packages/codelift/package.json
@@ -6,6 +6,8 @@
   "files": [
     ".next",
     "bin",
+    "index.js",
+    "index.d.ts",
     "register.dev.js",
     "register.js",
     "server.js"
