--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -14,10 +14,8 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
-    "autoprefixer": "^9.7.5",
     "codelift": "^1.0.10",
-    "cssnano": "^4.1.0",
-    "postcss-easy-import": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.2.0"
   }
 }
