--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@types/react": "^16.9.32",
     "codelift": "^1.0.10",
     "postcss-preset-env": "^6.7.0",
     "tailwindcss": "^1.2.0"
